Added node innerTexts etc

--- a/EventLibrary/EventLibrary.csproj
+++ b/EventLibrary/EventLibrary.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events.cs" />
+    <Compile Include="EventsParserFromHtml.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
