--- a/EventLibrary/EventLibrary.csproj
+++ b/EventLibrary/EventLibrary.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectingToDataBase.cs" />
+    <Compile Include="ConnectToDataBase.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
