--- a/EventLibrary/EventLibrary.csproj
+++ b/EventLibrary/EventLibrary.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Events.cs" />
     <Compile Include="EventsParserFromHtml.cs" />
+    <Compile Include="IParse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
