--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="provider" value="System.Data.SqlClient"/>
+    <add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\wozni\source\repos\EventLibrary\EventLibrary\ItEventsParser.mdf;Integrated Security=True"/>
+  </appSettings>
 </configuration>
