Code for inserting data #2

--- a/EventLibrary/EventLibrary.csproj
+++ b/EventLibrary/EventLibrary.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DataBaseOperations.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="EventsParserFromHtml.cs" />
+    <Compile Include="IDBOperations.cs" />
     <Compile Include="IParse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
