--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -5,7 +5,7 @@
     </startup>
   <appSettings>
     <add key="provider" value="System.Data.SqlClient"/>
-    <add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\wozni\source\repos\EventLibrary\EventLibrary\ItEventsParser.mdf;Integrated Security=True"/>
+    <add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\wozni\source\repos\EventLibrary\EventLibrary\DB\ItEventsParser.mdf;Integrated Security=True"/>
     <add key="SmtpPort" value="587"/>
     <add key="sTo" value="abbaba3271@gmail.com"/>
     <add key="host" value="smtp.gmail.com"/>
