--- a/EventLibrary/EventLibrary.csproj
+++ b/EventLibrary/EventLibrary.csproj
@@ -59,23 +59,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBaseOperations.cs" />
-    <Compile Include="Events.cs" />
-    <Compile Include="EventsParserFromHtml.cs" />
-    <Compile Include="IDBOperations.cs" />
-    <Compile Include="IParse.cs" />
-    <Compile Include="ISMTPOperations.cs" />
+    <Compile Include="DB\DataBaseOperations.cs" />
+    <Compile Include="EventClasses\Event.cs" />
+    <Compile Include="EventClasses\EventsParser.cs" />
+    <Compile Include="Interfaces\IDbOperations.cs" />
+    <Compile Include="Interfaces\IParse.cs" />
+    <Compile Include="Interfaces\ISmtpOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SMTPOperations.cs" />
+    <Compile Include="Resource1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource1.resx</DependentUpon>
+    </Compile>
+    <Compile Include="SMTP\SmtpOperations.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ItEventsParser.mdf">
+    <Content Include="DB\ItEventsParser.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="ItEventsParser_log.ldf">
+    <Content Include="DB\ItEventsParser_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>ItEventsParser.mdf</DependentUpon>
     </Content>
@@ -91,6 +96,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resource1.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
