--- a/EventLibrary_Tests/packages.config
+++ b/EventLibrary_Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="4.4.0" targetFramework="net461" />
+  <package id="AutoFixture.NUnit3" version="4.4.0" targetFramework="net461" />
+  <package id="Fare" version="2.1.1" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.8.4" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
 </packages>
