--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -1,16 +1,37 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <add name="ItEventsParserEntities" connectionString="metadata=res://*/DB.Model1.csdl|res://*/DB.Model1.ssdl|res://*/DB.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ItEventsParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+
   <appSettings>
     <add key="provider" value="System.Data.SqlClient"/>
-    <add key="connectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\wozni\source\repos\EventLibrary\EventLibrary\DB\ItEventsParser.mdf;Integrated Security=True"/>
+    <add key="connectionString" value="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ItEventsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
     <add key="SmtpPort" value="587"/>
     <add key="sTo" value="abbaba3271@gmail.com"/>
     <add key="host" value="smtp.gmail.com"/>
     <add key="author" value="abbaba3271@gmail.com"/>
     <add key="username" value="abbaba3271@gmail.com"/>
     <add key ="password" value="BardzoTrudneHaslo123"/>
+    <add key ="city" value="warszawa"/>
+    <add key ="cost" value=""/>
+    <add key="type" value=""/>
+    <!-- <add key="ItEventsParserEntities" value="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ItEventsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/> -->
   </appSettings>
 </configuration>
+
+
