--- a/AppEvent/packages.config
+++ b/AppEvent/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="4.4.0" targetFramework="net461" />
   <package id="AutoFixture.NUnit3" version="4.4.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Fare" version="2.1.1" targetFramework="net461" />
   <package id="NUnit" version="3.0.1" targetFramework="net461" />
 </packages>
