--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -27,7 +27,7 @@
     <add key="author" value="abbaba3271@gmail.com"/>
     <add key="username" value="abbaba3271@gmail.com"/>
     <add key ="password" value="BardzoTrudneHaslo123"/>
-    <add key ="city" value="warszawa"/>
+    <add key ="city" value="warszawa wroclaw"/>
     <add key ="cost" value=""/>
     <add key="type" value=""/>
     <!-- <add key="ItEventsParserEntities" value="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ItEventsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/> -->
