--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ItEventsParserEntities" connectionString="metadata=res://*/DB.Model1.csdl|res://*/DB.Model1.ssdl|res://*/DB.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ItEventsParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+    <add name="ItEventsParserEntity" connectionString="metadata=res://*/DB.ModelSqlServer.csdl|res://*/DB.ModelSqlServer.ssdl|res://*/DB.ModelSqlServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD4I19M;initial catalog=ItEventsParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -17,7 +18,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
   <appSettings>
     <add key="provider" value="System.Data.SqlClient"/>
     <add key="connectionString" value="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ItEventsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
@@ -27,10 +27,10 @@
     <add key="author" value="abbaba3271@gmail.com"/>
     <add key="username" value="abbaba3271@gmail.com"/>
     <add key ="password" value="BardzoTrudneHaslo123"/>
-    <add key ="city" value="warszawa wroclaw"/>
+    <add key ="city" value="poznan lodz"/>
     <add key ="cost" value=""/>
     <add key="type" value=""/>
-    <!-- <add key="ItEventsParserEntities" value="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ItEventsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/> -->
+    <add key="Time" value="2"/> 
   </appSettings>
 </configuration>
 
