--- a/EventLibrary/EventLibrary.csproj
+++ b/EventLibrary/EventLibrary.csproj
@@ -82,27 +82,27 @@
   <ItemGroup>
     <Compile Include="DB\DataBaseOperations.cs" />
     <Compile Include="DB\Event.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>ModelSqlServer.tt</DependentUpon>
     </Compile>
     <Compile Include="EventClasses\Event.cs" />
     <Compile Include="EventClasses\EventsParser.cs" />
     <Compile Include="Interfaces\IDbOperations.cs" />
     <Compile Include="Interfaces\IParse.cs" />
     <Compile Include="Interfaces\IEmail.cs" />
-    <Compile Include="DB\Model1.Context.cs">
+    <Compile Include="DB\ModelSqlServer.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
+      <DependentUpon>ModelSqlServer.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="DB\Model1.cs">
+    <Compile Include="DB\ModelSqlServer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>ModelSqlServer.tt</DependentUpon>
     </Compile>
-    <Compile Include="DB\Model1.Designer.cs">
+    <Compile Include="DB\ModelSqlServer.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <DependentUpon>ModelSqlServer.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
@@ -113,26 +113,25 @@
     <Compile Include="Services\EmailService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="DB\Model1.edmx">
+    <EntityDeploy Include="DB\ModelSqlServer.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+      <LastGenOutput>ModelSqlServer.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="App.Config" />
-    <None Include="DB\Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
+    <None Include="DB\ModelSqlServer.edmx.diagram">
+      <DependentUpon>ModelSqlServer.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DB\Model1.Context.tt">
+    <Content Include="DB\ModelSqlServer.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <DependentUpon>ModelSqlServer.edmx</DependentUpon>
+      <LastGenOutput>ModelSqlServer.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="DB\Model1.tt">
+    <Content Include="DB\ModelSqlServer.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
+      <DependentUpon>ModelSqlServer.edmx</DependentUpon>
+      <LastGenOutput>ModelSqlServer.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
