--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -21,11 +21,11 @@
     <add key="provider" value="System.Data.SqlClient"/>
     <add key="connectionString" value="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ItEventsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
     <add key="smtpPort" value="587"/>
-    <add key="sTo" value="abbaba3271@gmail.com"/>
+    <add key="sTo" value=""/>
     <add key="host" value="smtp.gmail.com"/>
-    <add key="author" value="abbaba3271@gmail.com"/>
-    <add key="username" value="abbaba3271@gmail.com"/>
-    <add key ="password" value="BardzoTrudneHaslo123"/>
+    <add key="author" value=""/>
+    <add key="username" value=""/>
+    <add key ="password" value=""/>
     <add key ="city" value="warszawa poznan lodz krakow katowice szczecin"/>
     <add key ="cost" value=""/>
     <add key="type" value=""/>
