Update #4 entityframework code first

--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -5,18 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings> 
-    <add name="ItEventsParserEntity" connectionString="metadata=res://*/DB.ModelSqlServer.csdl|res://*/DB.ModelSqlServer.ssdl|res://*/DB.ModelSqlServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD4I19M;initial catalog=ItEventsParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ItEventsParserEntity" 
+         connectionString="Data Source=DESKTOP-DD4I19M;Initial Catalog=ItEventParserDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
-  </entityFramework>
   <appSettings>
     <add key="provider" value="System.Data.SqlClient"/>
     <add key="connectionString" value="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ItEventsParser;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
@@ -29,7 +21,7 @@
     <add key ="city" value="warszawa poznan lodz krakow katowice szczecin"/>
     <add key ="cost" value=""/>
     <add key="type" value=""/>
-    <add key="time" value="2"/> 
+    <add key="time" value="5"/> 
   </appSettings>
 </configuration>
 
