--- a/AppEvent/App.config
+++ b/AppEvent/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings> 
-    <add name="ItEventsParserEntity" connectionString="metadata=res://*/DB.ModelSqlServer.csdl|res://*/DB.ModelSqlServer.ssdl|res://*/DB.ModelSqlServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD4I19M;initial catalog=ItEventsParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EventsParserEntity" connectionString="metadata=res://*/DB.ModelSqlServer.csdl|res://*/DB.ModelSqlServer.ssdl|res://*/DB.ModelSqlServer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD4I19M;initial catalog=ItEventsParser;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
